--- a/index.html
+++ b/index.html
@@ -1,288 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Untappd Venues</title>
-  <meta name="description" content="">
+  <title>Untappd Venue Checkins</title>
+  <meta name="description" content="Stay up to date with your favorite venue and watch the Untappd checkins flow in">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="js/vendor/angular/angular.min.js"></script>
+  <script src="js/controllers.js"></script>
+
   <link href='http://fonts.googleapis.com/css?family=Exo:300,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 
-<main>
-  <h1>Untappd Venue Checkins</h1>
+<main ng-controller="MyController">
+  <h1>{{untappd.response.checkins.items[0].venue.venue_name}}</h1> 
   <section>
 
-  <article class="checkin">
+  <article class="checkin" ng-repeat="item in untappd.response.checkins.items">
     <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">verset</h2>
-      <small class="date">6 Hours Ago</small>
+      <img ng-src="{{item.user.user_avatar}}" alt="User Profile" class="user-img">
+      <h2 class="user-name">{{item.user.user_name}}</h2>
+      <small class="date">{{item.created_at | date:'short'}}</small>
     </div>
 
     <div class="beer">
-      <h2 class="beer-name">Barrel Aged Abraxas</h2>
-      <h3 class="brewery">Perrenial Artisan Ales</h3>
-      <img src="http://placehold.it/500x500" alt="Beer Name" class="photo">
+      <h2 class="beer-name">{{item.beer.beer_name}}</h2>
+      <h3 class="brewery">{{item.brewery.brewery_name}}</h3>
+      <img ng-show="{{item.media.items.length > 0}}" ng-src="{{item.media.items[0].photo.photo_img_lg}}" alt="Beer Name" class="photo">
     </div>
 
     <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
+      <p ng-show="{{item.checkin_comment.length > 0}}" class="comments">{{item.checkin_comment}}</p>
+      <div class="rating r{{item.rating_score * 10}}" title="{{item.rating_score}}"></div>
     </div>
   </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">ferowcious</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Bourbon County Proprietors</h2>
-      <h3 class="brewery">Goose Island Brewery</h3>
-      <img src="http://placehold.it/300x400" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">hollandblue</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Fou Foune (2012)</h2>
-      <h3 class="brewery">Brassie Cantillion</h3>
-      <img src="http://placehold.it/200x200" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">sustyhops</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Dark Lord</h2>
-      <h3 class="brewery">Three Floyds Brewery</h3>
-      <img src="http://placehold.it/300x200" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/400x200" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/300x100" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-    <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/500x500" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/300x400" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/200x200" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/300x200" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/400x500" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/400x200" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
-  <article class="checkin">
-    <div class="user cf">
-      <img src="http://placehold.it/75x75" alt="User Profile" class="user-img">
-      <h2 class="user-name">User Name</h2>
-      <small class="date">6 Hours Ago</small>
-    </div>
-
-    <div class="beer">
-      <h2 class="beer-name">Beer Name</h2>
-      <h3 class="brewery">Brewery</h3>
-      <img src="http://placehold.it/300x100" alt="Beer Name" class="photo">
-    </div>
-
-    <div class="feedback">
-      <p class="comments">Comments go here limited to 140 characters.</p>
-      <small class="rating">Rating Goes here</small>
-    </div>
-  </article>
-
   
 </section>
 </main>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+<footer>
+  <small>&copy; 2015 Artisan Pixel</small>
+</footer>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-  </script>
 </body>
 </html>
